# email-signature-generator

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANUAL_TESTING_GUIDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  email_signature_generator.py  gui_main.py  main.py  pyproject.toml  test_gui_smoke.py
.git.backup/: COMMIT_EDITMSG  config  index
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: validate_ci.sh
.github/workflows/: test.yml
config/: default_config.yaml
docs/: BUILDING.md  RELEASING.md
docs/images/: README.md
scripts/: bump_version.py  create_github_release.py  generate_generic_logo.py  validate_version.py
src/email_signature/: __init__.py  __version__.py
src/email_signature/application/: __init__.py  use_cases.py
src/email_signature/domain/: __init__.py  config.py  exceptions.py  models.py  validators.py
src/email_signature/interface/: cli.py  (+1 more)
tests/: __init__.py
tests/property/: test_build_properties.py  test_community_health_properties.py  test_config_properties.py  test_config_state_properties.py  test_design_system_properties.py  test_docker_properties.py  test_documentation_sanitization_properties.py  test_file_properties.py  test_generic_logo_properties.py  test_gui_validation_properties.py  test_logo_properties.py  test_logo_reference_properties.py  test_logo_selection_properties.py  test_platform_properties.py  test_profile_properties.py  test_release_properties.py  test_rendering_properties.py  test_signature_generation_properties.py  test_test_data_sanitization_properties.py  test_use_case_properties.py  test_validation_properties.py  test_version_properties.py
tests/unit/: test_application_functionality.py  test_cli.py  test_config_sanitization.py  test_design_system.py  test_docker_logo_configuration.py  test_entry_points.py  test_fresh_clone_verification.py  test_git_history_sanitization.py  test_gui_folder_open.py  test_image_generation_cross_platform.py  test_logo_file_verification.py  test_logo_loader.py  test_platform_utils.py  test_preview_generator.py  test_theme_integration.py  test_use_cases.py
(+19 files in other folders)
